README: Replace lastfmsubmitd with pylast.

--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 .--------------.
 | Introduction |
 `--------------'
+
 LastWatch is a Last.fm scrobbler that fetches song information by using the
 inotify feature of the Linux kernel, version 2.6. You can use any OGG, MP3 or
 FLAC player to scrobble, as long as it doesn't use mmap(). The latter will be
@@ -9,11 +10,12 @@ fixed in some future version.
 .--------------.
 | Requirements |
 `--------------'
+
 In order to run LastWatch, you need Python (at least 2.3) and the following
 packages:
 
-- Lastfmsubmitd (that's where you submit your user/password ;-))
-  http://www.red-bean.com/~decklin/software/lastfmsubmitd/
+- pylast (at least version 0.5.0)
+  http://code.google.com/p/pylast/
 - pyinotify (at least version 0.6.0)
   http://pyinotify.sourceforge.net/
 - Mutagen (to retrieve meta information from audio files)
@@ -24,6 +26,7 @@ packages:
 .-----------------.
 | Using LastWatch |
 `-----------------'
+
 Try invoking ./lastwatch.py --help to get an overview about the available
 options. For example if you want to watch the directory /media/music you could
 just invoke:
